test/syntax/solidity_not_support/nameAndTypeResolution/549_warn_about_address_members_on_non_this_contract_send.sol
contract C {
    function f() view public {
        C c;
        c.send;
    }
}
// ----
// ParserError 2314: (67-71): Expected identifier but got 'send'
